Fix dropdown animation only running once on Safari

--- a/src/less/components/search.less
+++ b/src/less/components/search.less
@@ -203,6 +203,8 @@
 .uk-open > .uk-dropdown-search {
     -webkit-animation: @dropdown-search-animation 0.2s ease-in-out;
     animation: @dropdown-search-animation 0.2s ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
 }
 
 /*
